--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "tailwindcss": "^3.2.7",
     "vue-cli-plugin-electron-builder": "~2.1.1"
   },
   "eslintConfig": {
