--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -11,6 +12,11 @@ target/
 *.iws
 *.iml
 *.ipr
+## test data
+parse.csv
+parse.ods
+parse.xlsx
+
 
 ### Eclipse ###
 .apt_generated
