--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
       - name: Setup JDK
-        uses: actions/setup-java@1.4.4
+        uses: actions/setup-java@v1.4.4
         with:
           java-version: 17
       - name: Run package
